# Capture_Push_Plugin

./: .gitignore  Capture_Push_Lite_Setup.iss  Capture_Push_Setup.iss  GradeTracker_Setup.iss  README.md  VERSION  build_installer_exe.py  config.ini  config.md  generate_config.py  gui.spec  installer.py  plugins_index.json  pyproject.toml  test_feishu_sign.py  项目总体介绍.md  项目检查报告.md
.github/workflows/: build-school-plugin-with-index.yml  build.yml  main.yml
10546/: getCourseGrades.py
core/: config_manager.py  getCourseGrades.py  getCourseSchedule.py  go.py  log.py  mailer.py  push.py  updater.py
core/plugins/: __init__.py  school_plugin_manager.py
core/plugins/school/10546/: __init__.py  getCourseGrades.py  getCourseSchedule.py
core/plugins/school/12345/: __init__.py  getCourseGrades.py  getCourseSchedule.py
core/school/: __init__.py
core/school/10546/: __init__.py  getCourseGrades.py  getCourseSchedule.py
core/school/12345/: __init__.py  getCourseGrades.py  getCourseSchedule.py
core/senders/: EXTENSION_GUIDE.md  __init__.py  email_sender.py  feishu_sender.py  serverchan_sender.py
core/utils/: dpapi.py  registry.py  windows_auth.py
developer_tools/: EXTENSION_GUIDE.md  GUI_MODULAR_DESIGN.md  build.py  build_portable_venv.py  changconfig.py  register_or_undo.py
gui/: config_window.py  crypto_util.py  custom_widgets.py  dialogs.py  grades_window.py  gui.py  schedule_window.py  widgets.py
gui/tabs/: about_tab.py  base_tab.py  basic_tab.py  home_tab.py  plugin_management_tab.py  push_tab.py  school_time_tab.py  software_settings_tab.py
gui/utils/: button_handlers.py
gui/widgets/: collapsible_box.py
tray/: CMakeLists.txt  resources.rc  tray_app.cpp
