[project]
name = "capture-push"
version = "1.0.0"
description = "A course grade and schedule tracker with push notifications"
authors = [{name = "Student Tracker Team", email = "team@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "PySide6>=6.5.0",
]

